# image_editor2.0

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  vite.config.js
pkg/: wasm_lib.d.ts  wasm_lib.js  wasm_lib_bg.wasm  wasm_lib_bg.wasm.d.ts
src/: App.css  App.jsx
src/assets/: Svglogo.jsx
src/components/navbar/: Navbar.jsx  navbar.css
src/pages/Home/: Home.jsx  home.css
src/pages/cropIMAGE/: CropImage.jsx
wasm-lib/: Cargo.toml
wasm-lib/src/: lib.rs
